set height & prevent shift

--- a/style/_run-audit-btn.scss
+++ b/style/_run-audit-btn.scss
@@ -9,12 +9,16 @@
         border: 1px solid rgba(204, 204, 204, 1);
         border-radius: .5rem 0 0 .5rem;
         padding: .25rem;
+        height: 1.75rem;
     }
 
     #open-audit-checkboxes-dropdown-button {
         background: rgba(204, 204, 204, 0.5);
         border: 1px solid rgba(204, 204, 204, 1);
         border-radius: 0 .5rem .5rem 0;
+        height: 1.75rem;
+        display: grid;
+        place-content: center;
     }
 
     #open-audit-checkboxes-dropdown-button img.open {
